--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .connectWalletBtn {
-    @apply bg-blue-500 text-white font-bold py-2 px-4 rounded cursor-pointer;
+    @apply bg-[#6D285F] text-white font-bold py-2 px-4 rounded cursor-pointer;
   }
 
   .headerLink {
